--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ hr {
 
 
 .imagem{
-    background: url(http://angiocorpore.com.br/uploads/image_c90b330690034178d4e5e2fbbc75fd2d.jpg);
+    background: url(images/noticia1.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     height:20rem;
