--- a/institucional.css
+++ b/institucional.css
@@ -131,6 +131,41 @@ h3 {
 }
 
 
+.parceiros {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.parceiros h1 {
+    margin-bottom: 5rem;
+    margin-top: 2rem;
+    
+}
+
+.parceiros .imagens {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    
+}
+
+.imagens img {
+    width: 20%;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    border-radius: 1rem;
+}
+
+
+
+
 
 
 
@@ -166,7 +201,7 @@ h3 {
 }
 
 
-@media (max-width: 1024px) {
+@media (max-width: 1080px) {
 
     header img{
         width: 9rem;
@@ -232,6 +267,24 @@ h3 {
         width: 90%;
         margin-left: 1.5rem;
         
+    }
+
+    .parceiros {
+        flex-wrap: wrap;
+        margin-bottom: 2rem;
+    }
+
+    .parceiros h1 {
+        margin-bottom: 2rem;
+        font-size: 1.5rem;
+    }
+
+    .imagens img {
+        width: 45%;
+        margin-bottom: 2rem;
+        margin-top: 1rem;
+        border-radius: 1rem;
+        margin-right: 1rem;
     }
 
 
