--- a/exames&procedimentos.css
+++ b/exames&procedimentos.css
@@ -99,76 +99,159 @@ h3 {
     color: white;
 }
 
-.sobre {
+.nav a.active {
+    background: #025ca6;
+    transition: .5s;
+    color: white;
+}
+
+.container {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-bottom: 2rem;
-}
-
-.sobre h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 1rem;
 }
 
-.sobre p {
+.container h1 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.container button {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    width: 50%;
+}
+
+
+
+.collapsible {
+    background-color: #eee;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    padding: 1rem;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    
+
+}
+
+.collapsible:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: white;
+    float: right;
+    margin-left: 5px;
+  }
+
+ 
+.active, .collapsible:hover {
+    background-color: #025ca6;
+    color: white;
+    transition: 0.4s;
+  }
+
+
+
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    transition: max-height 1s ease-out;
+    
+    
+  }
+
+  .content span {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+  }
+
+  .content p{
     font-size: 1.1rem;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    width: 90%;
-    margin-left: 4rem;
-    
-}
-
-.sobre .box {
-    background-color: rgba(227, 228, 230, 0.742);
-    border-radius: 1rem ;
-    width: 90%;
-}
-
-
-.parceiros {
-    width: 100%;
+    margin-bottom: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
     
-}
+  }
 
-.parceiros h1 {
-    margin-bottom: 5rem;
-    margin-top: 2rem;
-    
-}
-
-.parceiros .imagens {
+  .content strong {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin-bottom: 2rem;
     margin-top: 1rem;
+    color: #000000;
+    
+  }
+
+  .content .alert p {
+    color: red;
+    font-size: 1.5rem;
+    
+}
+ 
+.content .alert a {
+    text-decoration: none;
     
 }
 
-.imagens img {
-    width: 20%;
+.content .alert button {
+    font-size: 1.6rem;
     margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     margin-top: 1rem;
-    border-radius: 1rem;
+    width: 100%;
+    background-color: rgb(0, 116, 159);
+    color: white;
+    border: none;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    
 }
 
+.content .alert button:hover {
+    background-color: rgb(0, 42, 58);
+    transition: 0.4s;
+    color: white;
+    
+}
 
-
-
-
-
-
+  
 
 /* Footer */
 
@@ -242,7 +325,6 @@ h3 {
 		left: 0;
 	}
 
-
     .nav {
         display: flex;
         align-items: center;
@@ -260,32 +342,47 @@ h3 {
 
     }
 
-    .sobre p {
-        font-size: 1.1rem;
+    .content span {
+        font-size: 1.9rem;
+        margin-bottom: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 2rem;
+        margin-top: 1rem;
+      }
+
+    
+    .content p{
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-bottom: 2rem;
+        margin-top: 1rem;
+        
+      }
+
+      .container button {
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
         margin-bottom: 2rem;
         margin-top: 1rem;
         width: 90%;
-        margin-left: 1.5rem;
-        
     }
 
-    .parceiros {
-        flex-wrap: wrap;
-        margin-bottom: 2rem;
-    }
 
-    .parceiros h1 {
-        margin-bottom: 2rem;
-        font-size: 1.5rem;
-    }
 
-    .imagens img {
-        width: 45%;
-        margin-bottom: 2rem;
-        margin-top: 1rem;
-        border-radius: 1rem;
-        margin-right: 1rem;
-    }
+
+    
+
 
 
 }
