--- a/pacientes.css
+++ b/pacientes.css
@@ -99,7 +99,13 @@ h3 {
     color: white;
 }
 
-.sobre {
+.nav a.active {
+    background: #025ca6;
+    transition: .5s;
+    color: white;
+}
+
+.container {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -108,60 +114,32 @@ h3 {
     margin-bottom: 2rem;
 }
 
-.sobre h1 {
+.container h1 {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
+    margin-bottom: 2rem;
+    color: #025ca6;
 }
 
-.sobre p {
-    font-size: 1.1rem;
+.container p {
+    font-size: 1.2rem;
     margin-bottom: 2rem;
     margin-top: 1rem;
     width: 90%;
     margin-left: 4rem;
-    
 }
 
-.sobre .box {
+.container .box {
     background-color: rgba(227, 228, 230, 0.742);
     border-radius: 1rem ;
     width: 90%;
 }
 
 
-.parceiros {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
-}
 
-.parceiros h1 {
-    margin-bottom: 5rem;
-    margin-top: 2rem;
-    
-}
 
-.parceiros .imagens {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    
-}
-
-.imagens img {
-    width: 20%;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    border-radius: 1rem;
-}
 
 
 
@@ -199,6 +177,7 @@ h3 {
     color: rgb(9, 18, 139);
     transition: all 0.3s ease;
 }
+
 
 
 @media (max-width: 1080px) {
@@ -242,7 +221,6 @@ h3 {
 		left: 0;
 	}
 
-
     .nav {
         display: flex;
         align-items: center;
@@ -260,7 +238,7 @@ h3 {
 
     }
 
-    .sobre p {
+    .container p {
         font-size: 1.1rem;
         margin-bottom: 2rem;
         margin-top: 1rem;
@@ -269,23 +247,20 @@ h3 {
         
     }
 
-    .parceiros {
-        flex-wrap: wrap;
-        margin-bottom: 2rem;
-    }
-
-    .parceiros h1 {
-        margin-bottom: 2rem;
+    .container h1 {
         font-size: 1.5rem;
-    }
-
-    .imagens img {
-        width: 45%;
         margin-bottom: 2rem;
         margin-top: 1rem;
-        border-radius: 1rem;
-        margin-right: 1rem;
+        width: 90%;
+        margin-left: 1.5rem;
+        
     }
+
+    .container .box {
+        width: 90%;
+    }
+
+
 
 
 }
