--- a/unidades.css
+++ b/unidades.css
@@ -86,9 +86,9 @@ h1 {
 
 
 
-.col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12, iframe{
-    width: 25rem;
-    height: 25rem;
+.col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, iframe{
+    width: 35rem;
+    height: 35rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,9 +96,11 @@ h1 {
     border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     flex: 1 0 30%;
-    margin: 1.2rem;
+    margin: 2rem;
     
 }
+
+
 
 h4 {
     font-size: 1.5rem;
@@ -112,8 +114,14 @@ p {
     
 }
 
-a {
-    margin-bottom: 1rem;
+.col3 a {
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
+
 }
 
 iframe {
@@ -202,7 +210,7 @@ iframe {
         
     }
     
-    .col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12, iframe{
+    .col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, iframe{
         width: 20rem;
         height: 20rem;
         border: 2px solid rgb(0, 0, 0);
