--- a/convenios.css
+++ b/convenios.css
@@ -128,7 +128,7 @@ h3 {
     
   }
   
-  #myUL {
+#box {
     /* Remove default list styling */
     list-style-type: none;
     padding: 0;
@@ -139,7 +139,7 @@ h3 {
 
  
   
-  #myUL li a {
+#box a {
     border: 1px solid #ddd; /* Add a border to all links */
     margin-top: -1px; /* Prevent double borders */
     background-color: #f6f6f6; /* Grey background color */
@@ -147,9 +147,12 @@ h3 {
     text-decoration: none; /* Remove default text underline */
     font-size: 18px; /* Increase the font-size */
     color: black; /* Add a black text color */
-    display: block; /* Make it into a block element to fill the whole list */
     margin: 1rem;
-    width: 40%;
+    width: 94%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
   }
   
   #myUL li a:hover {
@@ -253,11 +256,18 @@ h3 {
         width: 70%;
     }
 
-    #myUL li a {
+     #box {
         width: 70%;
-
+        
     }
 
+    #box a 
+    {
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
 
 
